Added calves page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
         <activity
             android:name="calfraises.xml.calfraises"
             android:label="@string/title_activity_calfraises"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="calves.xml.calves"
+            android:label="@string/title_activity_calves"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
