--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,10 @@
         <activity
             android:name="diamondpushups.xml.diamondpushups"
             android:label="@string/title_activity_diamondpushups"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="flutterkicks.xml.flutterkicks"
+            android:label="@string/title_activity_flutterkicks"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
