Added jump knee tucks page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,10 @@
         <activity
             android:name="jumpingjacks.xml.jumpingjacks"
             android:label="@string/title_activity_jumpingjacks"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="jumpkneetucks.xml.jumpkneetucks"
+            android:label="@string/title_activity_jumpkneetucks"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
