Checking to see if its actually pushing.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,10 @@
         <activity
             android:name="layzboy.xml.layzboy"
             android:label="@string/title_activity_layzboy"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="lunges.xml.lunges"
+            android:label="@string/title_activity_lunges"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
