Added pectorals page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,6 +95,10 @@
         <activity
             android:name="oneleggedsquats.xml.oneleggedsquats"
             android:label="@string/title_activity_oneleggedsquats"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="pectorals.xml.pectorals"
+            android:label="@string/title_activity_pectorals"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
