--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -159,6 +159,10 @@
         <activity
             android:name="tricepdips.xml.tricepdips"
             android:label="@string/title_activity_tricepdips"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="triceppushups.xml.triceppushups"
+            android:label="@string/title_activity_triceppushups"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
